# ixbrl-reporter

./: .gitignore  README.md  REGRESSION_TEST_INTEGRATION.md  TESTING_STATUS.md  TEST_STRATEGY.md  UNIT_TEST_IMPLEMENTATION_PLAN.md  accountants-report.yaml  auditors-report.yaml  balance-sheet.yaml  business.yaml  cashflow.yaml  ch.yaml  company-accounts-minimal.yaml  company-accounts.yaml  config-corptax.yaml  config-esef.yaml  config-uksef.yaml  config.yaml  corporation-tax.yaml  ct.yaml  directors-report.yaml  dpl.yaml  esef-computations.yaml  esef-metadata.yaml  esef.yaml  example.gnucash  example2.gnucash  metadata-corptax.yaml  metadata-esef.yaml  metadata-revised.yaml  metadata.yaml  micro-entity.json  mypy.ini  notes.yaml  profit-and-loss.yaml  pyproject.toml  pytest.ini  report.yaml  requirements-dev.txt  revised-auditors-report.yaml  (+3 more)
config/: ch-accounts.yaml  ch-unaudited-micro.yaml  style.yaml
detail/: auditors-report.yaml  directors-report.yaml  logo.yaml  metadata-corptax.yaml  metadata-esef.yaml  metadata-uksef.yaml  notes.yaml  revision-info.yaml  signature.yaml
docs/: config.md  configuration-workflow.md  screenshots.md  taxonomy.md
gnucash_ixbrl/: accounts.py  accounts_gnucash.py  accounts_piecash.py  basic_element.py  basicelement.py  composite.py  computation.py  computations_sheet.py  config.py  context.py  data_source.py  dataset.py  datasource.py  datum.py  debug_reporter.py  element.py  fact.py  fact_table.py  facttable.py  flex_sheet.py  flows_sheet.py  format.py  html.py  ixbrl.py  ixbrl_reporter.py  layout.py  multi_period.py  note_heading.py  (+19 more)
(+137 files in other folders)
