[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ixbrl-reporter"
version = "1.2.0"
description = "Production of iXBRL reports from templates and accounts files"
authors = [
    {name = "Cybermaggedon", email = "mark@cyberapocalypse.co.uk"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "lxml",
    "piecash",
    "PyYAML"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/cybermaggedon/ixbrl-reporter"
Download = "https://github.com/cybermaggedon/ixbrl-reporter/archive/refs/tags/v1.1.0.tar.gz"

[project.scripts]
ixbrl-reporter = "ixbrl_reporter.__main__:main"

[tool.setuptools.packages.find]
include = ["ixbrl_reporter*"]